# agentic-on-eks

./: .gitignore  PROJECT_README.md  README.md  build-images.sh  deploy-helm.sh  restart_pods.sh
agents/admin/: .env.oauth.template  Dockerfile  README.md  __main__.py  admin_agent.py  admin_agent_taskmanager.py  deploy.sh  oauth.py  oauth_a2a_client.py  pyproject.toml
agents/finance/: .env.example  Dockerfile  README.md  __main__.py  deploy.sh  finance_agent.py  finance_agent_taskmanager.py  globals.py  pyproject.toml
agents/hr/: .env.example  Dockerfile  __main__.py  config.yaml  deploy.sh  hr_agent.py  hr_agent_taskmanager.py  pyproject.toml  utils.py
agents/hr/mcp_server/: nager_mcp_server.py
charts/agents/: Chart.yaml  values.yaml
charts/agents/templates/: admin-agent.yaml  finance-agent.yaml  hr-agent.yaml  ui-app.yaml
common/: __init__.py
common/server/: oauth_middleware.py
common/utils/: __init__.py  langfuse_config.py  oauth_auth.py
docs/: auth.md  monitoring.md
environments/: demo-values.yaml  langfuse-values.yaml
infra/: eks.tf  iam_policy_bedrock.json  install.sh  langfuse.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  vpc.tf
monitoring/: README.md  deploy-monitoring.sh  traffic-generator.sh
ui/: .env.okta.template  Dockerfile  README_VALIDATION.md  __main__.py  auth.py  deploy.sh  input_validation.py  requirements.txt  test_validation.py
