[project]
name = "finance"
version = "0.1.0"
description = "Finance agent for salary calculations and financial queries using LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.3.2",
    "boto3>=1.28.64",
    "botocore>=1.38.18",
    "click>=8.1.8",
    "fastapi>=0.104.1",
    "httpx>=0.25.0",
    "langchain>=0.0.335",
    "langchain-aws>=0.2.23",
    "langchain-community>=0.0.10",
    "langgraph>=0.0.21",
    "mem0ai>=0.1.97",
    "numpy>=1.26.1",
    "pandas>=2.1.1",
    "pydantic>=2.7.2,<3.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "sse-starlette>=2.3.5",
    "starlette>=0.46.2",
    "typing-extensions>=4.8.0",
    "uvicorn>=0.23.2",
    "yfinance>=0.2.31",
]
